fix: left align callout text

--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -492,7 +492,7 @@ pre {
   border: 1px solid var(--border-primary);
   box-shadow: var(--shadow-01);
   display: flex;
-  text-align: center;
+  text-align: left;
   gap: 1rem;
   flex-direction: column;
   margin: 2rem 0;
